feat: product service - add logic for purchase product